Played with SEO
Added favicon to template and added that to the headers (not sure if it did much, I'm trying to see if it improves SEO score). I also added a meta description to each of the pages. I cleaned up the alt text in the footer and on the services and contact page

--- a/services.html
+++ b/services.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Landscaping, Lawn Maintenance, and Irrigation company. 
+    BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are envirnmentally conscious">
     <title>BrightSprout Landscaping</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -217,14 +220,14 @@
     <footer>
         <div class="footer-top">
             <div class="footer-logo">
-                <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
+                <img src="clientimages/brightsproutlogo.png" alt="BrightSprout Landscaping Logo" />
             </div>
 
             <div class="footer-socials">
-                <a href="#"><img src="socialicons/facebook.png" alt="facebook" /></a>
-                <a href="#"><img src="socialicons/linkedin.png" alt="linkedin" /></a>
-                <a href="#"><img src="socialicons/youtube.png" alt="youtube" /></a>
-                <a href="#"><img src="socialicons/instagram.png" alt="instagram" /></a>
+                <a href="#"><img src="socialicons/facebook.png" alt="Facebook" /></a>
+                <a href="#"><img src="socialicons/linkedin.png" alt="Linkedin" /></a>
+                <a href="#"><img src="socialicons/youtube.png" alt="Youtube" /></a>
+                <a href="#"><img src="socialicons/instagram.png" alt="Instagram" /></a>
             </div>
 
             <div class="footer-contact">
