--- a/template.html
+++ b/template.html
@@ -2,8 +2,11 @@
 <html lang="en">
 
 <head>
+    <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Landscaping, Lawn Maintenance, and Irrigation company. 
+    BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are envirnmentally conscious">
     <title>BrightSprout Landscaping</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
