--- a/services.html
+++ b/services.html
@@ -42,130 +42,154 @@
             </div>
         </section>
 
-        <table>
-            <tr>
-                <th class="greenTable header-bg">Packages</th>
-                <th class="header-bg">Details</th>
-                <th class="greenTable header-bg">Prices</th>
-            </tr>
-            <tr>
-                <td class="greenTable cell-bg">
-                    <p>1. Sprout Plan</p>
-                    <p>2. Growth Plan</p>
-                    <p>3. Bloom Plan</p>
-                </td>
-                <td>
-                    <p>1. On-site consultation, basic layout plan (front or back yard), plant selection guide (native & low-water species).</p>
-                    <p>2. Full-yard design (front & back), custom planting plan, soil and irrigation recommendations, 3D concept images.</p>
-                    <p>3. Full-yard design, sourcing & coordinating plant delivery, design adjustments post-installation, one follow-up maintenance visit.</p>
-                </td>
-                <td class="greenTable cell-bg">
-                    <p>1. $250</p>
-                    <p>2. $750</p>
-                    <p>3. $1,200</p>
-                </td>
-            </tr>
-        </table>
+        <section class="services-tables">
 
-        <table>
-            <tr>
-                <th class="greenTable header-bg">Lawn Services</th>
-                <th class="header-bg">Details</th>
-                <th class="greenTable header-bg">Prices</th>
-            </tr>
-            <tr>
-                <td class="greenTable cell-bg">
-                    <p>1. Sod Installation</p>
-                    <p>2. Native Grass Seeding</p>
-                    <p>3. Monthly Maintenance</p>
-                </td>
-                <td>
-                    <p>1. Preparation, soil amendment, sod laying, first watering, starter care instructions.</p>
-                    <p>2. Eco-conscious seeding blend, soil prep, slow-release fertilizer.</p>
-                    <p>3. Mowing, edging, organic fertilization, weed control.</p>
-                </td>
-                <td class="greenTable cell-bg">
-                    <p>1. $2.50–$4.50 per sq. ft.</p>
-                    <p>2. $1,000–$1,500 per yard</p>
-                    <p>3. $150–$250/month</p>
-                </td>
-            </tr>
-        </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="greenTable header-bg">Packages</th>
+                        <th class="header-bg">Details</th>
+                        <th class="greenTable header-bg">Prices</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="greenTable cell-bg">
+                            <p>Sprout Plan</p>
+                            <p>Growth Plan</p>
+                            <p>Bloom Plan</p>
+                        </td>
+                        <td class="details-column">
+                            <p>On-site consultation, basic layout plan (front or back yard), plant selection guide (native & low-water species).</p>
+                            <p>Full-yard design (front & back), custom planting plan, soil and irrigation recommendations, 3D concept images.</p>
+                            <p>Full-yard design, sourcing & coordinating plant delivery, design adjustments post-installation, one follow-up maintenance visit.</p>
+                        </td>
+                        <td class="greenTable cell-bg">
+                            <p>$250</p>
+                            <p>$750</p>
+                            <p>$1,200</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <tr>
-                <th class="greenTable header-bg">Irrigation Systems</th>
-                <th class="header-bg">Details</th>
-                <th class="greenTable header-bg">Prices</th>
-            </tr>
-            <tr>
-                <td class="greenTable cell-bg">
-                    <p>1. Basic Drip System</p>
-                    <p>2. Smart Yard System</p>
-                    <p>3. Rain Harvest Integration</p>
-                </td>
-                <td>
-                    <p>1. Drip irrigation for gardens, programmable timer.</p>
-                    <p>2. Drip & micro-sprinklers, app-controlled water schedule, rain sensor.</p>
-                    <p>3. Smart system plus rainwater catchment barrels and filtration.</p>
-                </td>
-                <td class="greenTable cell-bg">
-                    <p>1. $850</p>
-                    <p>2. $1,500</p>
-                    <p>3. $2,200</p>
-                </td>
-            </tr>
-        </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="greenTable header-bg">Lawn Services</th>
+                        <th class="header-bg">Details</th>
+                        <th class="greenTable header-bg">Prices</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="greenTable cell-bg">
+                            <p>Sod Installation</p>
+                            <p>Native Grass Seeding</p>
+                            <p>Monthly Maintenance</p>
+                        </td>
+                        <td class="details-column">
+                            <p>Preparation, soil amendment, sod laying, first watering, starter care instructions.</p>
+                            <p>Eco-conscious seeding blend, soil prep, slow-release fertilizer.</p>
+                            <p>Mowing, edging, organic fertilization, weed control.</p>
+                        </td>
+                        <td class="greenTable cell-bg">
+                            <p>$2.50–$4.50 per sq. ft.</p>
+                            <p>$1,000–$1,500 per yard</p>
+                            <p>$150–$250/month</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <tr>
-                <th class="greenTable header-bg">Seasonal Services</th>
-                <th class="header-bg">Details</th>
-                <th class="greenTable header-bg">Prices</th>
-            </tr>
-            <tr>
-                <td class="greenTable cell-bg">
-                    <p>1. Spring Prep</p>
-                    <p>2. Fall Ready</p>
-                    <p>3. Storm Recovery</p>
-                </td>
-                <td>
-                    <p>1. Leaf & debris removal, bed prep, pruning, first fertilization.</p>
-                    <p>2. Leaf & debris removal, perennial cutbacks, winter fertilizer.</p>
-                    <p>3. Branch & debris clearing, lawn recovery treatments.</p>
-                </td>
-                <td class="greenTable cell-bg">
-                    <p>1. $200–$450</p>
-                    <p>2. $200–$450</p>
-                    <p>3. Starting at $150</p>
-                </td>
-            </tr>
-        </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="greenTable header-bg">Irrigation Systems</th>
+                        <th class="header-bg">Details</th>
+                        <th class="greenTable header-bg">Prices</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="greenTable cell-bg">
+                            <p>Basic Drip System</p>
+                            <p>Smart Yard System</p>
+                            <p>Rain Harvest Integration</p>
+                        </td>
+                        <td class="details-column">
+                            <p>Drip irrigation for gardens, programmable timer.</p>
+                            <p>Drip & micro-sprinklers, app-controlled water schedule, rain sensor.</p>
+                            <p>Smart system plus rainwater catchment barrels and filtration.</p>
+                        </td>
+                        <td class="greenTable cell-bg">
+                            <p>$850</p>
+                            <p>$1,500</p>
+                            <p>$2,200</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
 
-        <table>
-            <tr>
-                <th class="greenTable header-bg">Specialty Add-Ons</th>
-                <th class="header-bg">Details</th>
-                <th class="greenTable header-bg">Prices</th>
-            </tr>
-            <tr>
-                <td class="greenTable cell-bg">
-                    <p>1. Patio planters and decorative pots</p>
-                    <p>2. Pollinator Garden Installation</p>
-                    <p>3. Low voltage garden lighting</p>
-                </td>
-                <td>
-                    <p>1. Selection, planting, placement.</p>
-                    <p>2. Bee & butterfly-friendly plants, signage.</p>
-                    <p>3. Path & accent lights, timer or solar powered.</p>
-                </td>
-                <td class="greenTable cell-bg">
-                    <p>$50–$200 each</p>
-                    <p>$300–$700</p>
-                    <p>$400–$1,000</p>
-                </td>
-            </tr>
-        </table>
+            <table>
+                <thead>
+                    <tr>
+                        <th class="greenTable header-bg">Seasonal Services</th>
+                        <th class="header-bg">Details</th>
+                        <th class="greenTable header-bg">Prices</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="greenTable cell-bg">
+                            <p>Spring Prep</p>
+                            <p>Fall Ready</p>
+                            <p>Storm Recovery</p>
+                        </td>
+                        <td class="details-column">
+                            <p>Leaf & debris removal, bed prep, pruning, first fertilization.</p>
+                            <p>Leaf & debris removal, perennial cutbacks, winter fertilizer.</p>
+                            <p>Branch & debris clearing, lawn recovery treatments.</p>
+                        </td>
+                        <td class="greenTable cell-bg">
+                            <p>$200–$450</p>
+                            <p>$200–$450</p>
+                            <p>Starting at $150</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th class="greenTable header-bg">Specialty Add-Ons</th>
+                        <th class="header-bg">Details</th>
+                        <th class="greenTable header-bg">Prices</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td class="greenTable cell-bg">
+                            <p>Patio planters and decorative pots</p>
+                            <p>Pollinator Garden Installation</p>
+                            <p>Low voltage garden lighting</p>
+                        </td>
+                        <td class="details-column">
+                            <p>Selection, planting, placement.</p>
+                            <p>Bee & butterfly-friendly plants, signage.</p>
+                            <p>Path & accent lights, timer or solar powered.</p>
+                        </td>
+                        <td class="greenTable cell-bg">
+                            <p>$50–$200 each</p>
+                            <p>$300–$700</p>
+                            <p>$400–$1,000</p>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+
+        </section>
 
         <section class="cards">
             <div class="card">
