--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Landscaping, Lawn Maintenance, and Irrigation company. 
-    BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are envirnmentally conscious">
+    <meta name="description" content="BrightSprout Landscaping offers eco-friendly lawn care, native plants, and sustainable irrigation for Missouri homes and small businesses.">
     <title>BrightSprout Landscaping</title>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="canonical" href="https://www.brightsprout.com/">
 </head>
 
 <body>
@@ -28,7 +28,7 @@
 
     <main>
         <section class="hero">
-            <img src="clientimages/house3after(actual).png" alt="Beautiful Landscape" class="hero-image" />
+            <img src="clientimages/house3after(actual).png" alt="Front yard with native plants and cement path" class="hero-image" />
             <div class="hero-text">
                 <h1>BrightSprout Landscaping</h1>
                 <p>"Growing beauty, one yard at a time."</p>
@@ -37,14 +37,31 @@
         </section>
 
         <section class="content">
-            <p>We are a local, Eco-friendly landscaping company that designs, installs, and maintains outdoor spaces
+            <p>We are a local, eco-friendly landscaping company that designs, installs, and maintains outdoor spaces
                 for homes and small businesses. We focus on sustainable plants, water-conscious irrigation, and creative garden design.
                 We combine sustainable practices with local expertise.</p>
 
             <p>Whether you’re looking for stunning garden designs or efficient
                 irrigation systems, we transform outdoor spaces into thriving green retreats.</p>
 
+            <section class="services-overview">
+                <h4>Our Services</h4>
+                <p>BrightSprout Landscaping offers complete outdoor solutions for Missouri homes and small businesses. Our eco-friendly landscaping packages include design plans, lawn installation, irrigation systems, and seasonal maintenance. From quick consultations with our Sprout Plan to full-yard transformations with our Bloom Plan, we help every yard grow beautifully and sustainably. Learn more about our services and pricing option to find the perfect fit for your space.</p>
+            </section>
+
             <a href="services.html" class="button-class"> Services &amp; Pricing</a>
+
+            <section class="local-section">
+                <h4>Serving Missouri Communities</h4>
+                <p>Based in the Kansas City area, BrightSprout Landscaping proudly serves nearby communities including Raymore, Belton, Lee’s Summit, and surrounding neighborhoods. Our knowledge of local soil types, weather patterns, and native plants helps us design outdoor spaces that look great all year round and are easy to maintain.</p>
+            </section>
+
+            <section class="tips-section">
+                <h4>BrightSprout Tips</h4>
+                <p>Did you know native plants can save up to 60% more water than traditional lawns? Our team helps homeowners select plants that not only thrive in Missouri but also reduce maintenance time and water costs. Visit our Blogs and Tips page for more ideas on how to create a landscape that works with nature—not against it.</p>
+                
+                <a href="blogandtips.html">Blog & Tips</a>
+            </section>
         </section>
 
         <section class="cards">
@@ -53,9 +70,9 @@
             </div>
 
             <div class="gallery-row">
-                <img src="clientimages/house2.jpg" alt="Landscape Example 1" />
-                <img src="clientimages/patio.jpg" alt="Landscape Example 2" />
-                <img src="clientimages/house1.jpg" alt="Landscape Example 3" />
+                <img src="clientimages/house2.jpg" alt="Large suburban home with a freshly landscaped front yard and neatly trimmed shrubs" />
+                <img src="clientimages/patio.jpg" alt="Backyard patio with green sofa, colorful pillows, and lush garden plants surrounding stone pavers" />
+                <img src="clientimages/house1.jpg" alt="Single-story brick house with a clean driveway and simple front lawn landscaping" />
             </div>
 
             <div><a href="gallery.html" class="gallery-button-class">View More!</a></div>
