index.html, styles,css
SEO

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             </div>
         </section>
 
+        <div class="card why-section">
+            <h2>Why Choose BrightSprout?</h2>
+        </div>
         <section class="content">
             <p>We are a local, eco-friendly landscaping company that designs, installs, and maintains outdoor spaces
                 for homes and small businesses. We focus on sustainable plants, water-conscious irrigation, and creative garden design.
@@ -59,8 +62,8 @@
             <section class="tips-section">
                 <h4>BrightSprout Tips</h4>
                 <p>Did you know native plants can save up to 60% more water than traditional lawns? Our team helps homeowners select plants that not only thrive in Missouri but also reduce maintenance time and water costs. Visit our Blogs and Tips page for more ideas on how to create a landscape that works with nature—not against it.</p>
-                
-                <a href="blogandtips.html">Blog & Tips</a>
+
+                <a href="blogandtips.html" class="button-class"> Blog &amp; Tips</a>
             </section>
         </section>
 
