--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </section>
 
         <div class="card why-section">
-            <h2>Why Choose BrightSprout?</h2>
+            <h2>Who Are We?</h2>
         </div>
         <section class="content">
             <p>We are a local, eco-friendly landscaping company that designs, installs, and maintains outdoor spaces
