--- a/index.html
+++ b/index.html
@@ -17,7 +17,28 @@
             <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
         </div>
 
-        <nav>
+        <!-- Simulate a smartphone / tablet -->
+        <div class="mobile-container">
+
+            <!-- Top Navigation Menu -->
+            <div class="topnav">
+                <nav>
+                    <a href="#home" class="active">Logo</a>
+                    <div id="myLinks">
+                        <a href="index.html">Home</a>
+                        <a href="blogandtips.html">Blog/Tips</a>
+                        <a href="gallery.html">Gallery</a>
+                        <a href="services.html">Services</a>
+                        <a href="contact.html" class="contact-btn">Contact Us</a>
+                    </div>
+                </nav>
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <img class="fa fa-bars" src=hamburgermenu.png />
+                </a>
+            </div>
+        </div>
+
+        <nav id="desktop-nav-container">
             <a href="index.html">Home</a>
             <a href="blogandtips.html">Blog/Tips</a>
             <a href="gallery.html">Gallery</a>
@@ -180,7 +201,16 @@
             <p>Disclaimer: This site was created as part of the Web Development II course at Northwest Missouri State University and was developed to learn and enhance the concepts within that course. It is not intended for public use.</p>
         </div>
     </footer>
-
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
 </body>
 
 </html>
