index.html, styles.css
Hamburger Menu

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
 
             <!-- Top Navigation Menu -->
             <div class="topnav">
+                <div class="mobile-logo">
+                    <a href="#home" class="active"><img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" /></a>
+                </div>
                 <nav>
-                    <a href="#home" class="active">Logo</a>
+
                     <div id="myLinks">
                         <a href="index.html">Home</a>
                         <a href="blogandtips.html">Blog/Tips</a>
@@ -32,12 +35,12 @@
                         <a href="contact.html" class="contact-btn">Contact Us</a>
                     </div>
                 </nav>
+                <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
                 <a href="javascript:void(0);" class="icon" onclick="myFunction()">
-                    <img class="fa fa-bars" src=hamburgermenu.png />
+                    <i class="fa fa-bars"></i>
                 </a>
             </div>
         </div>
-
         <nav id="desktop-nav-container">
             <a href="index.html">Home</a>
             <a href="blogandtips.html">Blog/Tips</a>
