fixed service form
took off the required tag for a question that didn't need it

--- a/services.html
+++ b/services.html
@@ -231,7 +231,7 @@
                     </select><br>
 
                     <label for="serviceSpecific">Please detail what job you'd like from the service you selected</label>
-                    <input type="text" id="serviceSpecific" name="serviceSpecific" placeholder="Sod Installation" required>
+                    <input type="text" id="serviceSpecific" name="serviceSpecific" placeholder="Sod Installation">
                 </fieldset>
 
                 <input type="reset" value="Reset">
