--- a/services.html
+++ b/services.html
@@ -197,7 +197,7 @@
         </section>
 
         <section class="form">
-            <form action="serviceactionpage.php" method="post">
+            <form action="serviceactionpage.php" method="get">
                 <label for="emailAddress">Email Address</label>
                 <input type="email" id="emailAddress" name="emailAddress" placeholder="bsprout.landscaping@gmail.com" required><br>
 
