--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
+    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="BrightSprout Landscaping offers eco-friendly lawn care, native plants, and sustainable irrigation for Missouri homes and small businesses.">
     <title>BrightSprout Landscaping</title>
     <link rel="stylesheet" href="styles.css" />
-    <link rel="canonical" href="https://www.brightsprout.com/">
 </head>
 
 <body>
