--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </nav>
                 <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()" aria-label="open menu">
                     <i class="fa fa-bars"></i>
                 </a>
             </div>
