--- a/gallery.html
+++ b/gallery.html
@@ -3,10 +3,11 @@
 
 <head>
     <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
+    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Landscaping, Lawn Maintenance, and Irrigation company. 
-    BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are envirnmentally conscious">
+    BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are environmentally conscious">
     <title>BrightSprout Landscaping</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -17,7 +18,31 @@
             <img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" />
         </div>
 
-        <nav>
+        <!-- Simulate a smartphone / tablet -->
+        <div class="mobile-container">
+
+            <!-- Top Navigation Menu -->
+            <div class="topnav">
+                <div class="mobile-logo">
+                    <a href="#home" class="active"><img src="clientimages/brightsproutlogo.png" alt="BrightSproutLogo" /></a>
+                </div>
+                <nav>
+
+                    <div id="myLinks">
+                        <a href="index.html">Home</a>
+                        <a href="blogandtips.html">Blog/Tips</a>
+                        <a href="gallery.html">Gallery</a>
+                        <a href="services.html">Services</a>
+                        <a href="contact.html" class="contact-btn">Contact Us</a>
+                    </div>
+                </nav>
+                <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+                <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </div>
+        <nav id="desktop-nav-container">
             <a href="index.html">Home</a>
             <a href="blogandtips.html">Blog/Tips</a>
             <a href="gallery.html">Gallery</a>
@@ -121,6 +146,16 @@
             <p>Disclaimer: This site was created as part of the Web Development II course at Northwest Missouri State University and was developed to learn and enhance the concepts within that course. It is not intended for public use.</p>
         </div>
     </footer>
+    <script>
+        function myFunction() {
+            var x = document.getElementById("myLinks");
+            if (x.style.display === "block") {
+                x.style.display = "none";
+            } else {
+                x.style.display = "block";
+            }
+        }
+    </script>
 </body>
 
 </html>
