--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
-    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="BrightSprout Landscaping offers eco-friendly lawn care, native plants, and sustainable irrigation for Missouri homes and small businesses.">
@@ -73,7 +73,7 @@
 
             <section class="services-overview">
                 <h3>Our Services</h3>
-                <p>BrightSprout Landscaping offers complete outdoor solutions for Missouri homes and small businesses. Our eco-friendly landscaping packages include design plans, lawn installation, irrigation systems, and seasonal maintenance. From quick consultations with our Sprout Plan to full-yard transformations with our Bloom Plan, we help every yard grow beautifully and sustainably. Learn more about our services and pricing option to find the perfect fit for your space.</p>
+                <p>BrightSprout Landscaping offers complete outdoor solutions for Missouri homes and small businesses. Our eco-friendly landscaping packages include design plans, lawn installation, irrigation systems, and seasonal maintenance. From quick consultations with our Sprout Plan to full-yard transformations with our Bloom Plan, we help every yard grow beautifully and sustainably. Learn more about our services and pricing options to find the perfect fit for your space.</p>
             </section>
 
             <a href="services.html" class="button-class"> Services &amp; Pricing</a>
@@ -116,7 +116,7 @@
                 <h2>Our Mission</h2>
             </div>
 
-            <div class="mission-section p">
+            <div class="mission-section">
                 <p>At BrightSprout Landscaping, we’re dedicated to creating outdoor spaces that benefit
                     both your property and the environment. Sustainability isn’t just a practice—it’s our promise.
                     From eco-friendly design choices to responsible maintenance practices, we strive to make a positive
