--- a/blogandtips.html
+++ b/blogandtips.html
@@ -3,11 +3,10 @@
 
 <head>
     <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
-    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Landscaping, Lawn Maintenance, and Irrigation company. 
-    BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are environmentally conscious">
+    <meta name="description" content="Landscaping, Lawn Maintenance, and Irrigation company. BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are environmentally conscious">
     <title>BrightSprout Landscaping</title>
     <link rel="stylesheet" href="styles.css" />
 </head>
@@ -20,7 +19,6 @@
 
         <!-- Simulate a smartphone / tablet -->
         <div class="mobile-container">
-
             <!-- Top Navigation Menu -->
             <div class="topnav">
                 <div class="mobile-logo">
