--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="icon" type="image/x-icon" href="socialicons/favicon.ico">
-    <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Landscaping, Lawn Maintenance, and Irrigation company. BrightSprout Landscaping offers many affordable packages to create beautiful lawns that are environmentally conscious.">
