fixing services contact form
fixing services contact form

--- a/services.html
+++ b/services.html
@@ -231,8 +231,9 @@
                 <input type="date" id="jobDate" name="jobDate"><br>
 
                 <label for="freeQuote">Are you scheduling a free quote?</label>
-                <input type="checkbox" id="freeQuote" name="freeQuote" required><br>
-
+                <div class="form-checkbox">
+                    <input type="checkbox" id="freeQuote">
+                </div>
                 <fieldset>
                     <legend>Packages</legend>
                     <label for="packageSelect">Sign up for package</label>
