fixed layout/alignment issues in different screen sizes
contact.html, styles.css ->

fixed layout/alignment issues in different screen sizes

--- a/contact.html
+++ b/contact.html
@@ -67,53 +67,43 @@
         <section class="cards">
             <div class="card">
                 <h2>Jamie Rivers</h2>
-                <h3>Owner & Designer</h3>
             </div>
         </section>
 
         <section class="contentTwo">
-            <section class="images">
-                <img src="clientimages/jamiesmall.jpg" alt="Our owner and designer, Jamie Rivers">
-            </section>
-            <p>
-                Jamie’s expertise in horticulture and sustainable design guides every project.
-                With a keen eye for detail and a deep respect for the natural environment,
-                Jamie ensures each landscape is not only visually stunning but ecologically responsible.
-            </p>
+            <section class="images"> <img src="clientimages/jamiesmall.jpg" alt="jamie rivers"> </section>
+            <div class="bio-text">
+                <h3>Owner & Designer</h3>
+                <p> Jamie’s expertise in horticulture and sustainable design guides every project. With a keen eye for detail and a deep respect for the natural environment, Jamie ensures each landscape is not only visually stunning but ecologically responsible. </p>
+            </div>
         </section>
 
         <section class="cards">
             <div class="card">
                 <h2>Carlos Lopez</h2>
-                <h3>Irrigation Specialist</h3>
             </div>
         </section>
 
         <section class="contentTwo">
-            <section class="images">
-                <img src="clientimages/carlos.jpg" alt="Our irrigation specialist, Carlos Lopez">
-            </section>
-            <p>
-                Carlos is the wizard behind our water-efficient systems. His innovative irrigation solutions
-                ensure your landscape flourishes while conserving one of our most precious resources.
-            </p>
+            <section class="images"> <img src="clientimages/carlos.jpg" alt="carlos lopez"> </section>
+            <div class="bio-text">
+                <h3>Irrigation Specialist</h3>
+                <p> Carlos is the wizard behind our water-efficient systems. His innovative irrigation solutions ensure your landscape flourishes while conserving one of our most precious resources. </p>
+            </div>
         </section>
 
         <section class="cards">
             <div class="card">
                 <h2>Mina Patel</h2>
-                <h3>Maintenance Lead</h3>
             </div>
         </section>
 
         <section class="contentTwo">
-            <section class="images">
-                <img src="clientimages/mina.png" alt="Our maintenance lead, Mina Patel">
-            </section>
-            <p>
-                Mina keeps every garden at its peak through all seasons. Her knowledge of plants, soils,
-                and seasonal care routines ensures that your landscape continues to thrive long after installation.
-            </p>
+            <section class="images"> <img src="clientimages/mina.png" alt="mina patel"> </section>
+            <div class="bio-text">
+                <h3>Maintenance Lead</h3>
+                <p> Mina keeps every garden at its peak through all seasons. Her knowledge of plants, soils, and seasonal care routines ensures that your landscape continues to thrive long after installation. </p>
+            </div>
         </section>
 
         <section class="Form">
